--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
                     <div class="content-container">
                         <div id="modalContentWrapper" class="modalContentWrapper">
                             <div class="logoWithNameMobileModal">
-                                <img src="/img/logo.svg" alt="">
+                                <img src="./img/logo.svg" alt="">
                             </div>
                             <div onclick="closeModal()"
                                 class="navigation_buttons modal_navigation_buttons inter-regular">
@@ -54,7 +54,7 @@
             <div id="mobileNavWithHamburgerMenu" class="mobileNavWithHamburgerMenu">
                 <div id="mobileNavWithHamburgerMenuWrapper" class="mobileNavWithHamburgerMenuWrapper">
                     <div onclick="scrollToSection('header')" class="logoWithNameMobile burgerElement">
-                        <img src="/img/navLogo.svg" alt="">
+                        <img src="./img/navLogo.svg" alt="">
                     </div>
                     <div class="burgerMenuDivider"></div>
                     <div id="burger_menu" class="burger_menu burgerElement">
@@ -119,7 +119,7 @@
                     <a onclick="goToProject(1)" class="projectWrapperButton" tabindex="5">
                         <!-- This needs to be reworked on tab element are getting focused only on chrome and not other browsers-->
                         <div onclick="goToProject(1)" id="project1" class="project project1">
-                            <img src="/img/project1.svg" alt="">
+                            <img src="./img/project1.svg" alt="">
                             <div class="decorLineForProject"></div>
                             <div class="projectText ">
                                 <div class="projectTitle">Project title</div>
@@ -129,7 +129,7 @@
                     </a>
                     <a onclick="goToProject(2)" class="projectWrapperButton" tabindex="6">
                         <div class="project project2">
-                            <img src="/img/project2.svg" alt="">
+                            <img src="./img/project2.svg" alt="">
                             <div class="decorLineForProject"></div>
                             <div class="projectText ">
                                 <div class="projectTitle">Project title</div>
@@ -139,7 +139,7 @@
                     </a>
                     <a onclick="goToProject(3)" class="projectWrapperButton" tabindex="7">
                         <div class="project project3">
-                            <img src="/img/project3.svg" alt="">
+                            <img src="./img/project3.svg" alt="">
                             <div class="decorLineForProject"></div>
                             <div class="projectText ">
                                 <div class="projectTitle">Project title</div>
