Style: Updated img paths

--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <div id="stickyNavPopUp" class="stickyNavPopUp">
                 <div id="stickyNavPopUpWrapper" class="stickyNavPopUpWrapper">
                     <div onclick="scrollToSection('header')" class="stickyNavPopUpLogoWithName burgerElement">
-                        <img src="/img/navLogo.svg" alt="">
+                        <img src="./img/navLogo.svg" alt="">
                     </div>
                     <div class="burgerMenuDivider"></div>
                     <button tabindex="8" onclick="scrollToSection('work')">
