Style: updating img paths

--- a/project.html
+++ b/project.html
@@ -20,7 +20,7 @@
         <div id="mobileNavWithHamburgerMenu" class="mobileNavWithHamburgerMenu">
             <div id="mobileNavWithHamburgerMenuWrapper" class="mobileNavWithHamburgerMenuWrapper">
                 <div onclick="scrollToSection('header')" class="logoWithNameMobile burgerElement navigationLogo">
-                    <img class="logo" src="/img/navLogo.svg" alt="">
+                    <img class="logo" src="./img/navLogo.svg" alt="">
                 </div>
                 <div class="burgerMenuDivider"></div>
                 <div onclick="openModal()" id="burger_menu" class="burger_menu burgerElement">
@@ -55,7 +55,7 @@
                 <div id="stickyNavPopUpWrapper" class="stickyNavPopUpWrapper">
                     <div onclick="scrollToSection('header')"
                         class="stickyNavPopUpLogoWithName burgerElement navigationLogo">
-                        <img src="/img/navLogo.svg" alt="">
+                        <img src="./img/navLogo.svg" alt="">
                     </div>
                     <div class="burgerMenuDivider"></div>
                     <button class="projectnavigationButton" tabindex="8" onclick="location.href='index.html#work'">
