--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
                 <div class="header_content-wrapper">
                     <div class="logo">
                         <div class="logoWithName">
-                            <img src="/img/logo.svg" alt="">
+                            <img src="./img/logo.svg" alt="">
                         </div>
                     </div>
                     <div class="navigation">
