Style: updating image paths

--- a/project.html
+++ b/project.html
@@ -80,7 +80,7 @@
                     <div class="content-container">
                         <div id="modalContentWrapper" class="modalContentWrapper">
                             <div class="logoWithNameMobileModal">
-                                <img src="/img/logo.svg" alt="">
+                                <img src="./img/logo.svg" alt="">
                             </div>
                             <div onclick="closeModal()"
                                 class="navigation_buttons modal_navigation_buttons inter-regular">
