--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <link rel="stylesheet" href="reset.css">
     <link rel="stylesheet" href="style.css">
     <script defer src="app.js"></script>
-    <title>Document</title>
+    <title>Houseplant HOME</title>
 </head>
 
 <body>
